DT-2023 Fixed the IE alignment issue.

--- a/src/client/components/molecules/news-modal.scss
+++ b/src/client/components/molecules/news-modal.scss
@@ -85,7 +85,7 @@
 
 .title {
   height: 44px;
-  width: 280px;
+  width: 282px;
   color: #333333;
   font-family: "Source Sans Pro";
   margin-bottom: 15px;
